[package]
name = "RCLI"
version = "0.1.0"
authors = ["ChuanDe You"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.52", features = ["derive"] }
csv = "1.4.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.0"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
zxcvbn = "3.1.0"
